# taskara

./: .gitignore  Dockerfile  Dockerfile.prod  Makefile  README.md  cloudbuild.yaml  logging.conf  pyproject.toml  pytest.ini
.data/: tasks.db  threads.db
.data/test/: tasks_test_1714585101.db
.github/workflows/: poetry-tests.yml
deploy/base/: ingress.yaml
taskara/: __init__.py  benchmark.py  config.py  env.py  flag.py  img.py  metrics  models.py  prompt.py  review.py  task.py  util.py
taskara/auth/: key.py  provider.py  transport.py
taskara/cli/: main.py
taskara/db/: conn.py  models.py  redis_connection.py
taskara/deploy/base/: cert.yaml  deployment_api.yaml  external_secret.yaml  ingress.yaml  kustomization.yaml  pg.yaml  secret_store.yaml  service.yaml
taskara/runtime/: base.py  docker.py  kube.py  load.py  process.py
taskara/server/: app.py  models.py
taskara/server/router/: benchmarks.py  tasks.py
tests/: test_bench.py  test_eval.py  test_runtime.py  test_task.py  test_tpl.py
tests/benchmarks/: airbnb.yaml
