[tool.poetry]
name = "taskara"
version = "0.1.44"
description = "Task management for AI agents"
authors = ["Patrick Barker <patrickbarkerco@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.29"
pydantic = "^2.6.4"
threadmem = "^0.2.25"
skillpacks = "^0.1.7"
devicebay = "^0.1.16"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
flake8 = "^7.0.0"
black = "^24.2.0"
pytest-env = "^1.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
lint = "scripts.lint:main"
