[tool.poetry]
name = "taskara"
version = "0.1.129"
description = "Task management for AI agents"
authors = ["Patrick Barker <patrickbarkerco@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.29"
pydantic = "^2.6.4"
threadmem = "^0.2.26"
docker = {version = "^7.0.0", optional = true}
kubernetes = {version = "^29.0.0", optional = true}
google-auth = {version = "^2.29.0", optional = true}
google-cloud-container = {version = "^2.45.0", optional = true}
namesgenerator = "^0.3"
typer = {version = "^0.12.3", optional = true}
tabulate = {version = "^0.9.0", optional = true}
devicebay = "^0.1.25"
shortuuid = "^1.0.13"
tqdm = "^4.66.4"
skillpacks = "^0.1.46"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
flake8 = "^7.0.0"
black = "^24.2.0"
pytest-env = "^1.1.3"
ipykernel = "^6.29.4"
ruff = "^0.6.5"

[tool.poetry.extras]
runtime = ["kubernetes", "docker", "google-auth", "google-cloud-container"]
cli = ["typer", "tabulate"]
all = ["kubernetes", "docker", "google-auth", "google-cloud-container", "typer", "tabulate"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
lint = "scripts.lint:main"
